tests/ui/const-fn.stderr
error[E0015]: cannot call non-const closure in constant functions
 --> tests/ui/const-fn.rs:3:1
  |
3 | #[no_panic]
  | ^^^^^^^^^^^
  |
  = note: closures need an RFC before allowed to be called in constant functions
  = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  = note: this error originates in the attribute macro `no_panic` (in Nightly builds, run with -Z macro-backtrace for more info)
